--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.8"
 psycopg2 = "^2.8.6"
 Django = "^3.1.7"
 psycopg2-binary = "^2.8.6"
+graphene-django = "^2.15.0"
 
 [tool.poetry.dev-dependencies]
 
